--- a/appsettings.json
+++ b/appsettings.json
@@ -2,9 +2,12 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=XXX.XXX.XXX.XXX; Database=IdentityDBBurak; User Id=sa; Password=ŞİFRE; Integrated Security=False;"
   },
   "AllowedHosts": "*"
 }
-
